
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int isqstr (int) ;

int GetNextAddr(int Addr)
{
 Addr+=4;
 for(;;)
 {
  if( !isqstr( (Addr & 0x000000FF) ) ) Addr+=4;
  else if( !isqstr( (Addr & 0x0000FF00) >> 8 ) ) Addr+=4;
  else if( !isqstr( (Addr & 0x00FF0000) >> 16 ) ) Addr+=4;
  else if( !isqstr( (Addr & 0xFF000000) >> 24 ) ) Addr+=4;
  else break;
 }

 return(Addr);
}
