; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23441.c_GetNextAddr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23441.c_GetNextAddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetNextAddr(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = add nsw i32 %3, 4
  store i32 %4, i32* %2, align 4
  br label %5

5:                                                ; preds = %44, %1
  %6 = load i32, i32* %2, align 4
  %7 = and i32 %6, 255
  %8 = call i32 @isqstr(i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %5
  %11 = load i32, i32* %2, align 4
  %12 = add nsw i32 %11, 4
  store i32 %12, i32* %2, align 4
  br label %44

13:                                               ; preds = %5
  %14 = load i32, i32* %2, align 4
  %15 = and i32 %14, 65280
  %16 = ashr i32 %15, 8
  %17 = call i32 @isqstr(i32 %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %22, label %19

19:                                               ; preds = %13
  %20 = load i32, i32* %2, align 4
  %21 = add nsw i32 %20, 4
  store i32 %21, i32* %2, align 4
  br label %43

22:                                               ; preds = %13
  %23 = load i32, i32* %2, align 4
  %24 = and i32 %23, 16711680
  %25 = ashr i32 %24, 16
  %26 = call i32 @isqstr(i32 %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %31, label %28

28:                                               ; preds = %22
  %29 = load i32, i32* %2, align 4
  %30 = add nsw i32 %29, 4
  store i32 %30, i32* %2, align 4
  br label %42

31:                                               ; preds = %22
  %32 = load i32, i32* %2, align 4
  %33 = and i32 %32, -16777216
  %34 = lshr i32 %33, 24
  %35 = call i32 @isqstr(i32 %34)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %40, label %37

37:                                               ; preds = %31
  %38 = load i32, i32* %2, align 4
  %39 = add nsw i32 %38, 4
  store i32 %39, i32* %2, align 4
  br label %41

40:                                               ; preds = %31
  br label %45

41:                                               ; preds = %37
  br label %42

42:                                               ; preds = %41, %28
  br label %43

43:                                               ; preds = %42, %19
  br label %44

44:                                               ; preds = %43, %10
  br label %5

45:                                               ; preds = %40
  %46 = load i32, i32* %2, align 4
  ret i32 %46
}

declare dso_local i32 @isqstr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
